checkin/custom.css
html,
body {
  background: #f0f0f0;
  height: 100%;
}

.question {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-grow: 1;
  background: #ffe2e2;
  color: #101010;
  font-size: 2rem;
  width: 100%;
  min-height: 50%;
  position: relative;
}

.action-button {
  position: absolute;
  bottom: 0.25rem;
  height: 3rem;
  width: 3rem;
  background-color: inherit;
  border: none;
  color: #8c8c8c;
  cursor: pointer;
  font-size: 2rem;
  text-align: center;
  padding: 0;
  align-content: center;
}
.refresh-button {
  right: 3.5rem;
}
.used-button {
  right: 0.25rem;
}

.action-msg {
  position: absolute;
  bottom: 0.25rem;
  right: 0.25rem;
  font-size: 1.5rem;
  text-align: right;
  background: inherit;
  z-index: 3;
  padding: 0 0.5rem;
}

.action-msg:empty {
  display: none;
}

@media (min-width: 992px) {
  .question {
    flex-grow: 0;
    width: 75%;
    align-self: center;
    border: 0.25rem solid #a0a0a0;
    border-radius: 1rem;
    font-size: 3rem;
  }
}

@media (min-width: 1200px) {
  .question {
      font-size: 4rem;
  }
}

.footer {
  align-self: end;
  margin-top: 1rem;
  justify-content: center;
  width: 100%;
}

@media (min-width: 992px) {
    .footer {
        font-size: 1.5rem;
    }
}

.list-inline-item:not(:last-child) {
  margin-right: 1.5rem;
}

